Add new error responses
